# Robin-s-Hoodie

./: .gitignore  README.md  docker-compose.yml
config/: api_keys_template.json  development.json  nginx.conf  production.json  prometheus.yml
cpp/: CMakeLists.txt  Dockerfile
cpp/src/communication/: redis_client.h
docs/: architecture.md  development_workflow.md
python/: Dockerfile  requirements.txt  rsi_ml_signals.json
python/src/data_bridge/: redis_data_client.py
python/src/sentiment/: news_sentiment_analyzer.py
python/src/trading_engine/strategies/: combined_strategy.py  rsi_ml_strategy.py
scripts/: deploy.sh  setup_dev_environment.sh
swift/TradingApp/App/: ContentView.swift  TradingAppApp.swift
swift/TradingApp/Services/: APIService.swift  PortfolioService.swift
swift/TradingApp/Views/: ChartsView.swift  PortfolioView.swift  SettingsView.swift  TradingSignalView.swift
